# guia-ne

./: pyproject.toml
guia_ne/: items.py  middlewares.py  pipelines.py  scrapy.cfg  settings.py
guia_ne/spiders/: ibge_higher_education_census_spider.py
nbs/: 00-coleta-universidades-federais-ne.ipynb
