[tool.poetry]
name = "guia-ne"
version = "0.1.0"
description = ""
authors = ["Tiago Henrique <tiagohs.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "guia_ne"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
pandas = "^2.1.3"
matplotlib = "^3.8.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
isort = "^5.12.0"
black = "^23.11.0"
taskipy = "^1.12.0"
ipdb = "^0.13.13"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.4.8"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
